fix cursor visibility in mobile mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ html {
 }
 
 .cursor {
+  display: none;
   position: absolute;
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7), 1px 2px 4px 0px rgba(0, 255, 255, 0.7), 2px 4px 8px 0px rgba(0, 255, 255, 0.7), 2px 4px 16px 0px rgba(0, 255, 255, 0.7);
           box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7), 1px 2px 4px 0px rgba(0, 255, 255, 0.7), 2px 4px 8px 0px rgba(0, 255, 255, 0.7), 2px 4px 16px 0px rgba(0, 255, 255, 0.7);
@@ -479,6 +480,9 @@ body .container .contact .media a img {
 }
 
 @media only screen and (min-width: 1200px) {
+  body .cursor {
+    display: block;
+  }
   body .container .homepage .topBar {
     position: relative;
   }
